--- a/index.html
+++ b/index.html
@@ -9,33 +9,36 @@
     <link rel="stylesheet" href="./pages/main/style.css">
     <link rel="stylesheet" href="./pages/main/media/media.css">
     <link rel="stylesheet" href="./assets/others/others.css">
+    <link rel="stylesheet" href="./assets/others/media/media.css">
 </head>
 
 <body id="body">
     <section class="header-hero">
-        <header class="header">
-            <a class="logo" href="">
-                <p class="logo-title">online</p>
-                <div class="logo-container">
-                    <p class="logo-title">Z</p>
-                    <img src="./assets/icons/logo.svg" class="logo-icon">
+        <section class="header-wrapper">     
+            <header class="header">
+                <a class="logo" href="">
+                    <p class="logo-title">online</p>
+                    <div class="logo-container">
+                        <p class="logo-title">Z</p>
+                        <img src="./assets/icons/logo.svg" class="logo-icon">
+                    </div>
+                </a>
+                <nav class="nav header-nav">
+                    <a href="" class="nav-link">About</a>
+                    <a href="./pages/map/index.html" class="nav-link">Map</a>
+                    <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
+                    <button class="nav-link" id="contact-open__header">Contact us</button>
+                    <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
+                </nav>
+                <div class="header-container">
+                    <input type="text" class="header-container__input">
+                    <button class="header-container__search"></button>
+                    <button id="login-open" class="header-container__login">log in</button>
+                    <button id="signup-open" class="header-container__signup">sign up</button>
+                    <button id="menu-open" class="header-container__btn"></button>
                 </div>
-            </a>
-            <nav class="nav header-nav">
-                <a href="" class="nav-link">About</a>
-                <a href="./pages/map/index.html" class="nav-link">Map</a>
-                <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
-                <button class="nav-link" id="contact-open__header">Contact us</button>
-                <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
-            </nav>
-            <div class="header-container">
-                <input type="text" class="header-container__input">
-                <button class="header-container__search"></button>
-                <button id="login-open" class="header-container__login">log in</button>
-                <button id="signup-open" class="header-container__signup">sign up</button>
-                <button id="menu-open" class="header-container__btn"></button>
-            </div>
-        </header>
+            </header>
+        </section>
         <section class="menu">
             <a href="" class="menu-link">About</a>
             <a href="./pages/map/index.html" class="menu-link">Map</a>
@@ -210,26 +213,28 @@
             <a href="./pages/zoos-pandas/index.html" class="animals-links"><img src="./assets/images/Pandas.png" class="animals-img" alt=""></a>
         </section>
     </main>
-    <footer class="footer">
-        <a class="logo footer-logo" href="">
-            <p class="logo-title">online</p>
-            <div class="logo-container">
-                <p class="logo-title">Z</p>
-                <img src="./assets/icons/logo.svg" class="logo-icon">
+    <section class="footer-wrapper">
+        <footer class="footer">
+            <a class="logo footer-logo" href="">
+                <p class="logo-title">online</p>
+                <div class="logo-container">
+                    <p class="logo-title">Z</p>
+                    <img src="./assets/icons/logo.svg" class="logo-icon">
+                </div>
+            </a>
+            <nav class="nav footer-nav">
+                <a href="" class="nav-link">About</a>
+                <a href="./pages/map/index.html" class="nav-link">Map</a>
+                <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
+                <button class="nav-link" id="contact-open__footer">Contact us</button>
+                <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
+            </nav>
+            <div class="footer-container">
+                <p class="footer-author">Design by Lemeshko Kateryna</p>
+                <p class="footer-author footer-author-2"> ©RSSchool and ©Yem Digital 2021</p>
             </div>
-        </a>
-        <nav class="nav footer-nav">
-            <a href="" class="nav-link">About</a>
-            <a href="./pages/map/index.html" class="nav-link">Map</a>
-            <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
-            <button class="nav-link" id="contact-open__footer">Contact us</button>
-            <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
-        </nav>
-        <div class="footer-container">
-            <p class="footer-author">Design by Lemeshko Kateryna</p>
-            <p class="footer-author footer-author-2"> ©RSSchool and ©Yem Digital 2021</p>
-        </div>
-    </footer>
+        </footer>
+    </section>
 
     <!--Contact-us || pop-up-->
     <section id="contact">
