--- a/pages/zoos-alligators/index.html
+++ b/pages/zoos-alligators/index.html
@@ -12,28 +12,40 @@
 </head>
 
 <body>
-    <header class="header">
-        <a class="logo" href="../../index.html">
-            <p class="logo-title">online</p>
-            <div class="logo-container">
-                <p class="logo-title">Z</p>
-                <img src="../../assets/icons/logo.svg" class="logo-icon">
-            </div>
-        </a>
-        <nav class="nav">
-            <a href="../../index.html" class="nav-link">About</a>
-            <a href="../map/index.html" class="nav-link">Map</a>
-            <a href="" class="nav-link">Zoos</a>
-            <button class="nav-link" id="contact-open__header">Contact us</button>
-            <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
-        </nav>
-        <div class="header-container">
-            <input type="text" class="header-container__input">
-            <button class="header-container__search"></button>
-            <button class="header-container__login">log in</button>
-            <button class="header-container__signup">sign up</button>
-        </div>
-    </header>
+    <section class="header-hero">
+        <section class="header-wrapper">     
+            <header class="header">
+                <a class="logo" href="">
+                    <p class="logo-title">online</p>
+                    <div class="logo-container">
+                        <p class="logo-title">Z</p>
+                        <img src="../../assets/icons/logo.svg" class="logo-icon">
+                    </div>
+                </a>
+                <nav class="nav header-nav">
+                    <a href="../../index.html" class="nav-link">About</a>
+                    <a href="" class="nav-link">Map</a>
+                    <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
+                    <button class="nav-link" id="contact-open__header">Contact us</button>
+                    <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
+                </nav>
+                <div class="header-container">
+                    <input type="text" class="header-container__input">
+                    <button class="header-container__search"></button>
+                    <button id="login-open" class="header-container__login">log in</button>
+                    <button id="signup-open" class="header-container__signup">sign up</button>
+                    <button id="menu-open" class="header-container__btn"></button>
+                </div>
+            </header>
+        </section>
+        <section class="menu">
+            <a href="" class="menu-link">About</a>
+            <a href="./pages/map/index.html" class="menu-link">Map</a>
+            <a href="./pages/zoos-pandas/index.html" class="menu-link">Zoos</a>
+            <button class="menu-link" id="contact-open__menu">Contact us</button>
+            <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
+            <button class="menu-link" id="login-open-2">my account</button>
+        </section>
     <section class="main-section">
         <aside class="aside">
             <div class="aside-container">
@@ -139,26 +151,28 @@
     <section class="donate">
         <button class="donate-btn" id="donate-open">Donate to volunteers</button>
     </section>
-    <footer class="footer">
-        <a class="logo" href="../../index.html">
-            <p class="logo-title">online</p>
-            <div class="logo-container">
-                <p class="logo-title">Z</p>
-                <img src="../../assets/icons/logo.svg" class="logo-icon">
+    <section class="footer-wrapper">
+        <footer class="footer">
+            <a class="logo" href="../../index.html">
+                <p class="logo-title">online</p>
+                <div class="logo-container">
+                    <p class="logo-title">Z</p>
+                    <img src="../../assets/icons/logo.svg" class="logo-icon">
+                </div>
+            </a>
+            <nav class="nav">
+                <a href="../../index.html" class="nav-link">About</a>
+                <a href="" class="nav-link">Map</a>
+                <a href="../zoos-pandas/index.html" class="nav-link">Zoos</a>
+                <button class="nav-link" id="contact-open__footer">Contact us</button>
+                <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
+            </nav>
+            <div class="footer-container">
+                <p class="footer-author">Design by Lemeshko Kateryna</p>
+                <p class="footer-author footer-author-2"> ©RSSchool and ©Yem Digital 2021</p>
             </div>
-        </a>
-        <nav class="nav">
-            <a href="../../index.html" class="nav-link">About</a>
-            <a href="../map/index.html" class="nav-link">Map</a>
-            <a href="" class="nav-link">Zoos</a>
-            <button class="nav-link" id="contact-open__footer">Contact us</button>
-            <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
-        </nav>
-        <div class="footer-container">
-            <p class="footer-author">Design by Lemeshko Kateryna</p>
-            <p class="footer-author footer-author-2"> ©RSSchool and ©Yem Digital 2021</p>
-        </div>
-    </footer>
+        </footer>
+    </section>
 
     <!--Contact-us || pop-up-->
     <section id="contact">
